  * Allow Object names to be anything (experiment).
 API
  * Extensive API changes. Most, but not completely backwards-compatible.
  * ucar.ma2.Range, ucar.ma2.Section 
  * Array local iterator: hasNext() next() methods.
  * Writer replaces OutputStream. Default is UTF-8.
  * NetcdfFile.writeCDL(PrintWriter). strict escapes names.
 Libraries
  * use new visad library 12/04/07
 Bugs
  09: hdf5 byteOrder must be set for chunked, not compressed (tiledLayout)

 Changes in version 2.2.22
 API
  * make Indexer, RegularIndexer public so can be used by IOSP
 Bugs
  * NetcdfCFWriter convert false_easting, false_northing to km
  * read/write interleave without fill; RandomAccessFile: flush now checks minLength
  * LambertAzimuthal was incorrectly requiring standard_parallel parameter
  * CF: look for axis=Z attrinute, make first in CoordSysBuilder list
  * Transverse Mercator accepts false_easting, false_northing
  * WRFConventions: makeZCoordAxis: SHORT should be DOUBLE
  * UnidataStationObsDataset : use timeObs if no timeNominal
  * UnidataStationObsDataset : check that obs links point to station
  * AWIPS, WRF Stereographic projection needs abs() in scale calculation (thanks to R. Schmunk)
  * OceanS case when a = 0.
  * opendap DConnect2 : escape query strings
  * CoordSysBuilder was putting non-CoordinateAxis into axis list, getting a ClassCast Error
  * If adding recordStructure, add to N3headers uvars list, so gets updated on a syncExtend.
  * quote special XML chars correctly in NcML
  * add "file:" prefix to reletive URLs when writing NcML location
 Library
  * httpClient 3.1
  * opendap 2.1 fix for struct.member
  * use grib 6.0 for fix of mixed table use

Changes in version 2.2.21
 Features
  * VerticalPerspectiveView: projection overrides latlon2projBB, use in GeoGrid to calculate ranges
  * Grib: handle Gaussian Lat/Lon correctly
  * NcML: new type: JoinExistingOne has one coordinate per file, with coordValue specified from filename
 API