@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project name="cdm" default="makeJar" basedir=".">
   <property name="release.version" value="4.0"/>
-  <property name="release.version.minor" value="${release.version}.09"/>
+  <property name="release.version.minor" value="${release.version}.10"/>
   <property name="build.debug" value="on"/>
   <property name="build.release" value="false"/>
   <tstamp>
@@ -26,7 +26,6 @@
   <property name="resources.dir" location="${root.dir}/src/main/resources"/>
   <property name="doc.dir" location="${root.dir}/doc"/>
   <property name="lib.dir" location="${root.dir}/../lib"/>
-  <property name="resources.dir" location="${root.dir}/src/main/resources"/>
 
   <property name="build.dir" location="${root.dir}/target"/>
   <property name="build.classes.dir" location="${build.dir}/classes"/>
@@ -73,8 +72,11 @@
     <exclude name="ucar/nc2/dt2/**/*.java" />
     <!-- include name="dods/**/*.java"/ -->
     <include name="thredds/**/*.java"/>
-    <exclude name="thredds/util/net/*"/>
-    <exclude name="thredds/util/reflect/*"/>
+    <exclude name="thredds/cataloggen/config/*"/>
+    <exclude name="thredds/wcs/**"/>
+    <exclude name="ucar/nc2/dataset/grid/*"/>
+    <exclude name="ucar/nc2/stream/*"/>
+    <exclude name="ucar/nc2/util/reflect/*"/>
   </patternset>
 
   <!-- Libraries -->
@@ -188,10 +190,13 @@
       <fileset dir="${build.classes.dir}">
         <include name="ucar/ma2/*"/>
         <include name="ucar/nc2/*"/>
-        <include name="ucar/nc2/util/NetcdfFileCache.class"/>
+        <include name="ucar/nc2/iosp/*"/>
+        <include name="ucar/nc2/iosp/netcdf3/*"/>
+        <include name="ucar/nc2/util/*"/>
         <include name="ucar/unidata/io/*"/>
         <include name="ucar/unidata/io/http/*"/>
         <include name="ucar/unidata/io/bzip2/*"/>
+        <include name="ucar/unidata/util/Format.class"/>
         <include name="ucar/unidata/util/StringUtil.class"/>
       </fileset>
       <fileset dir="${build.dir}" includes="README"/>
@@ -214,7 +219,8 @@
       <fileset dir="${build.dir}" includes="CHANGES"/>
 
       <fileset dir="${resources.dir}">
-        <include name="resources/**/*"/>
+        <include name="resources/nj22/**"/>
+        <include name="resources/thredds/**"/>
       </fileset>
 
       <manifest>
